# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("tonic") {
  sources = [
    "dart_api_scope.h",
    "dart_error.cc",
    "dart_error.h",
    "dart_class_provider.cc",
    "dart_class_provider.h",
    "dart_class_library.cc",
    "dart_class_library.h",
    "dart_converter.cc",
    "dart_converter.h",
    "dart_isolate_scope.cc",
    "dart_isolate_scope.h",
    "dart_persistent_value.cc",
    "dart_persistent_value.h",
    "dart_state.cc",
    "dart_state.h",
    "dart_string.cc",
    "dart_string.h",
    "dart_string_cache.cc",
    "dart_string_cache.h",
    "dart_value.cc",
    "dart_value.h",
    "dart_wrappable.cc",
    "dart_wrappable.h",
    "dart_wrapper_info.h",
  ]

  deps = [
    "//base",
    "//dart/runtime/bin:libdart_withcore",
    "//sky/engine/wtf",
  ]
}
